# Neural-Radiance-Field-NeRF-for-Dynamic-scence-Reconstruction

./: .gitignore  CHANGELOG.md  EXPERIMENTS_RESULTS.md  INSTALL.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
applications/: 01_3D_Reconstruction_App.py
config/: example_config.yaml
docs/: index.md
notebooks/: 01_3D_Scene_Representation.py  02_Core_NeRF_Pipeline.py  03_Advanced_Rendering_Techniques.py  04_Dynamic_Scene_Handling.py  05_Training_Optimization.py  ENHANCEMENT_STATUS.md
src/: __init__.py  data_loader.py  train.py
src/models/: __init__.py  nerf.py
tests/: run_tests.sh
