[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerf-dynamic-reconstruction"
version = "0.1.0"
description = "Real-Time Neural Radiance Field (NeRF) for Dynamic Scene Reconstruction on Edge GPUs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rishav Raj", email = "your.email@example.com"},
]
keywords = [
    "neural-radiance-fields",
    "nerf",
    "computer-vision",
    "3d-reconstruction",
    "edge-computing",
    "pytorch",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

full = [
    "tinycudann>=1.7",
    "trimesh>=3.23.0",
    "pyrender>=0.1.45",
    "open3d>=0.17.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "lpips>=0.1.4",
    "tensorboard>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/Rishav-raj-github/Neural-Radiance-Field-NeRF-for-Dynamic-scence-Reconstruction"
Repository = "https://github.com/Rishav-raj-github/Neural-Radiance-Field-NeRF-for-Dynamic-scence-Reconstruction"
Issues = "https://github.com/Rishav-raj-github/Neural-Radiance-Field-NeRF-for-Dynamic-scence-Reconstruction/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
